// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page controller helpers format should return a valid human readable v1 response 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Tuesday 1 July 2025

Example notify form form received at 12:00am on 2 April 2025.

---

## What is your name?

\`\`\`
Someone
\`\`\`

---

## Additional details

---

## What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

---

## What is your date of birth?

\`\`\`
1 January 2000
\`\`\`

---

## What month is it?

\`\`\`
August 2025
\`\`\`

---

## Team Member

[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

## Who are your favourite LotR characters?

* Gandalf
* Frodo

---

## Please add supporting evidence

Uploaded 1 file:

* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)



Thanks,
Defra"
`;

exports[`Page controller helpers format should return a valid human readable v1 response 2 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Tuesday 1 July 2025

Pizza Form form received at 12:00am on 2 April 2025.

---

## Pizza

[Download&nbsp;Pizza&nbsp;(CSV)](http://designer/file-download/11111111-1111-1111-1111-111111111111)

---

## How would you like to receive your pizza?

Delivery

---

## Multiline Text field

Line 1
Line 2
Line 3

---

## Multiline Text field 2

Line 1
Line 2
Line 3

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/00000000-0000-0000-0000-000000000000)



Thanks,
Defra"
`;

exports[`Page controller helpers format should return a valid human readable v1 response for legacy graph-based forms 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Tuesday 1 July 2025

Pizza Form form received at 12:00am on 2 April 2025.

---

## Your age

\`\`\`
4
\`\`\`

---

## Country of birth

England \\(GB\\-ENG\\)

---

## First name

\`\`\`
John
\`\`\`

---

## Last name

\`\`\`
Doe
\`\`\`

---

## person

[Download&nbsp;person&nbsp;(CSV)](http://designer/file-download/11111111-1111-1111-1111-111111111111)

---

## Passport number

\`\`\`
23423
\`\`\`

---

## Number of people in your household

\`\`\`
543
\`\`\`

---

## Upload proof of address

Uploaded 1 file:

* [bank_statement.pdf](http://designer/file-download/2c39f4bf-2ccc-4b73-8e0e-c91549b56989)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/00000000-0000-0000-0000-000000000000)



Thanks,
Defra"
`;

exports[`Page controller helpers format should return a valid human readable v1 response in Draft mode 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Tuesday 1 July 2025

Example notify form form received at 12:00am on 2 April 2025.

---

## What is your name?

\`\`\`
Someone
\`\`\`

---

## Additional details

---

## What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

---

## What is your date of birth?

\`\`\`
1 January 2000
\`\`\`

---

## What month is it?

\`\`\`
August 2025
\`\`\`

---

## Team Member

[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

## Who are your favourite LotR characters?

* Gandalf
* Frodo

---

## Please add supporting evidence

Uploaded 1 file:

* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)



Thanks,
Defra"
`;

exports[`Page controller helpers format should return a valid human readable v1 response in preview mode 1`] = `
"^ For security reasons, the links in this email expire at 12:00am on Tuesday 1 July 2025

This is a test of the Example notify form live form.

Example notify form form received at 12:00am on 2 April 2025.

---

## What is your name?

\`\`\`
Someone
\`\`\`

---

## Additional details

---

## What is your address?

1 Anywhere Street
Anywhereville
Anywhereshire
AN1 2WH

---

## What is your date of birth?

\`\`\`
1 January 2000
\`\`\`

---

## What month is it?

\`\`\`
August 2025
\`\`\`

---

## Team Member

[Download&nbsp;Team&nbsp;Member&nbsp;(CSV)](http://designer/file-download/e3005cd2-8b1c-4dc4-b2ac-bd1ff73666a9)

---

## Who are your favourite LotR characters?

* Gandalf
* Frodo

---

## Please add supporting evidence

Uploaded 1 file:

* [supporting_evidence.pdf](http://designer/file-download/ef4863e9-7e9e-40d0-8fea-cf34faf098cd)

---

[Download&nbsp;main&nbsp;form&nbsp;(CSV)](http://designer/file-download/818d567d-ee05-4a7a-8c49-d5c54fb09b16)



Thanks,
Defra"
`;
